--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="google-signin-client_id" content="351519000450-i2r4nk7hnp5c40i757dbifjkdhap4b6t.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="25401005977-ok03n82ko5ihlv14h2jacbsf0b4bgmta.apps.googleusercontent.com">
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css">
@@ -44,39 +45,47 @@
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button type="button" class="btn btn-danger content" style="margin-left: 1rem" onclick="signOut()">Logout</button>
         </form>
       </div>
     </nav>
 
-    <div class="container" style="height: 50vh">
+    <section class="login">
+      <div class="container" style="height: 50vh">
+        <div class="card text-center" style="margin-top: 15rem; padding: 5rem 3rem">
+          <h2 style="margin-bottom: 3rem">Login</h2>
+          <form id="formLogin">
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-6">
+                <input type="email" class="form-control" id="email" placeholder="Email">
+              </div>
+            </div>
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-6">
+                <input type="password" class="form-control" id="password" placeholder="Password">
+              </div>
+            </div>
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-6">
+                <button type="submit" id="login" class="btn btn-block btn-primary" >Login</button>
+                <button type="submit" class="btn btn-primary">Register</button>
+              </div>
+            </div><br>
+            <div class="form-group row justify-content-center">
+              <div>
+                <p class="small">Have Google acount?</p>
+                <div class="g-signin2" style="margin: auto" data-onsuccess="onSignIn"></div>
+                <!-- <div class="btn btn-danger" style="margin: auto" onclick="signOut()">Sign out</div> -->
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
 
-      <div class="login card text-center" style="margin-top: 15rem; padding: 5rem 3rem">
-        <h2 style="margin-bottom: 3rem">Login</h2>
-        <form>
-          <div class="form-group row justify-content-center">
-            <div class="col-sm-6">
-              <input type="email" class="form-control" id="email" placeholder="Email">
-            </div>
-          </div>
-          <div class="form-group row justify-content-center">
-            <div class="col-sm-6">
-              <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-          </div>
-          <div class="form-group row justify-content-center">
-            <div class="col-sm-6">
-              <button type="submit" id="login" class="btn btn-block btn-primary">Login</button>
-            </div>
-          </div><br>
-          <div class="form-group row justify-content-center">
-            <div>
-              <p class="small">Have Google acount?</p>
-              <div class="g-signin2" style="margin: auto" data-onsuccess="onSignIn"></div>
-              <div class="btn btn-danger" style="margin: auto" onclick="signOut()">Sign out</div>
-            </div>
-          </div>
-        </form>
-    </div>
+    <section class="content">
+      <h1>1231231</h1>
+    </section>
     
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
