--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css">
-
+    
     <title>Anime Engine</title>
   </head>
-  <body>
+  <body style="background: #0000">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Anime Engine</a>
@@ -48,9 +48,9 @@
       </div>
     </nav>
 
-    <div class="container" style="height: 50vh">
+    <div class="container" style="height: 50vh; width: 60%; color: white">
 
-      <div class="login card text-center" style="margin-top: 15rem; padding: 5rem 3rem">
+      <div class="login card text-center" style="margin-top: 7rem; padding: 5rem 3rem; background-image: url(bg.jpg)">
         <h2 style="margin-bottom: 3rem">Login</h2>
         <form>
           <div class="form-group row justify-content-center">
@@ -72,11 +72,14 @@
             <div>
               <p class="small">Have Google acount?</p>
               <div class="g-signin2" style="margin: auto" data-onsuccess="onSignIn"></div>
-              <div class="btn btn-danger" style="margin: auto" onclick="signOut()">Sign out</div>
             </div>
           </div>
         </form>
+        <p class="small">OR</p>
+        <a href="#" class="register small">Sign Up</a>
+      </div>
     </div>
+  
     
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
