--- a/index.html
+++ b/index.html
@@ -67,37 +67,37 @@
     </section>
 
     <section class="register" style=" display: none">
-        <div class="container" style="height: 50vh; width: 60%;color: white;">
-            <div class="card text-center" style="margin-top: 7rem; padding: 5rem 3rem; background: url(bg.jpg)">
-              <h2 style="margin-bottom: 3rem">Sign Up</h2>
-              <form id="formRegister">
-                <div class="form-group row justify-content-center">
-                  <div class="col-sm-6">
-                    <input type="email" class="form-control" id="emailRegis" placeholder="Email">
-                  </div>
+      <div class="container" style="height: 50vh; width: 60%;color: white;">
+        <div class="card text-center" style="margin-top: 7rem; padding: 5rem 3rem; background: url(bg.jpg)">
+          <h2 style="margin-bottom: 3rem">Sign Up</h2>
+          <form id="formRegister">
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-6">
+                <input type="email" class="form-control" id="emailRegis" placeholder="Email">
+              </div>
+            </div>
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-6">
+                <input type="password" class="form-control" id="passwordRegis" placeholder="Password">
+              </div>
+            </div><br>
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-4">
+                <button type="submit" id="login" class="btn btn-block btn-primary" >Create Account</button>
+              </div>
+            </div><br>
+            <div class="form-group row justify-content-center">
+                <div>
+                  <p class="small">Have Google acount?</p>
+                  <div class="g-signin2" style="margin: auto" data-onsuccess="onSignIn"></div>
                 </div>
-                <div class="form-group row justify-content-center">
-                  <div class="col-sm-6">
-                    <input type="password" class="form-control" id="passwordRegis" placeholder="Password">
-                  </div>
-                </div><br>
-                <div class="form-group row justify-content-center">
-                  <div class="col-sm-4">
-                    <button type="submit" id="login" class="btn btn-block btn-primary" >Create Account</button>
-                  </div>
-                </div><br>
-                <div class="form-group row justify-content-center">
-                    <div>
-                      <p class="small">Have Google acount?</p>
-                      <div class="g-signin2" style="margin: auto" data-onsuccess="onSignIn"></div>
-                    </div>
-                  </div>
-              </form>
+              </div>
+          </form>
+        </div>
+      </div>
     </section>
 
-    <section class="content">
-      <h1>1231231</h1>
-    </section>
+    <section class="content"></section>
     
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
