--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body style="background: #0000">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Anime Engine</a>
+      <div class="navbar-brand" style="cursor: pointer" onclick="backToHome()">Anime Engine</div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,11 +21,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <div class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" id="search-anime" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" onclick="searchAnime()">Search</button>
           <button type="button" class="btn btn-danger content" style="margin-left: 1rem" onclick="signOut()">Logout</button>
-        </form>
+        </div>
       </div>
     </nav>
 
@@ -106,11 +106,16 @@
       </div>
     </section>
 
-    <section class="content row">
+    <section class="content" id="content-section">
       <div class="container">
-        <h2>Upcoming Animes</h2>
-        <div class="row" id="content">
-        
+        <h2 class="text-center" style="margin: 2rem 0">Upcoming Animes</h2>
+        <div class="row" id="content"></div>
+      </div>
+    </section>
+
+    <section id="content-anime-detail-section">
+      <div class="container">
+        <div class="row" id="content-anime-detail">
         </div>
       </div>
     </section>
