homepage and detail jikan

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <section class="content" id="content-section">
       <div class="container">
-        <h2 class="text-center" style="margin: 2rem 0">Upcoming Animes</h2>
+        <h2 class="text-center" id="upcomingText" style="margin: 2rem 0">Upcoming Animes</h2>
         <div class="row" id="content"></div>
       </div>
     </section>
