--- a/table-pantsu.html
+++ b/table-pantsu.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6" style="width:33vw;">
+        <div class="col-12" style="width:33vw;">
             <h1 class="border-bottom text-center">480p</h1>
             <div class="d-flex flex-column align-items-stretch" id="480p">
                 <div class="d-flex align-items-center">
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12">
             <h1 class="border-bottom text-center">720p</h1>
             <div class="d-flex flex-column align-items-stretch" id="720p">
                 <div class="d-flex align-items-center">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12">
             <h1 class="border-bottom text-center">1080p</h1>
             <div class="d-flex flex-column align-items-stretch" id="1080p">
                 <div class="d-flex align-items-center">
@@ -106,18 +106,19 @@
             return `
                 <div class="row align-items-center pl-3">
                     <i class="col-1 fas fa-folder"></i>
-                    <a href="${magnet}" class="col-8">${name}</a>
+                    <a href="${magnet}" class="col-7">${name}</a>
                     <div class="col-1 d-flex justify-content-between align-items-center">
-                        <span class="text-primary mr-2">S</span>
-                        <i class="fas fa-arrow-up mr-2 text-primary"></i>
-                        <span class="text-primary">${seeders}</span>
+                        <span class="text-primary mr-4 col-8">Seeders</span>
+                        <i class="fas fa-arrow-up text-primary col-2"></i>
+                        <span class="text-primary col-2">${seeders}</span>
                     </div>
                     <div class="col-1"></div>
                     <div class="col-1 d-flex justify-content-between align-items-center">
-                        <span class="text-danger mr-2">L</span>
-                        <i class="fas fa-arrow-down mr-2 text-danger"></i>
-                        <span class="text-danger mr-2">${leechers}</span>
-                    </div>
+                        <span class="text-danger mr-4 col-8">Leechers</span>
+                        <i class="fas fa-arrow-down text-danger col-2"></i>
+                        <span class="text-danger col-2">${leechers}</span>
+                        </div>
+                    <div class="col-1"></div>
                 </div>
             `
         }
