:fire: detail kitsu

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
     <section class="content" id="content-section">
       <div class="container">
-        <h1 class="text-center" style="margin: 2rem 0;font-family: 'Permanent Marker', cursive;">Upcoming Animes</h1>
+        <h1 class="text-center title" style="margin: 2rem 0;font-family: 'Permanent Marker', cursive;">Upcoming Animes</h1>
         <div class="row" id="content"></div>
       </div>
     </section>
 
     <section id="content-anime-detail-section">
       <div class="container">
-          <h1 class="text-center" style="margin: 2rem 0; font-family: 'Permanent Marker', cursive;">Anime Detail</h1>
+          <h1 class="text-center title" style="margin: 2rem 0; font-family: 'Permanent Marker', cursive;">Anime Detail</h1>
         <div class="row" id="content-anime-detail">
         </div>
       </div>
